--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "php": ">=5.5.9",
         "ext-curl": "*",
         "illuminate/support": "5.*",
-        "myschoolmanagement/rested": "dev-master"
+        "myschoolmanagement/rested": "1.0.*"
     },
     "autoload": {
         "psr-4": { "Rested\\Laravel\\": "src" }
